--- a/Report.qmd
+++ b/Report.qmd
@@ -840,22 +840,216 @@ Our GitHub Actions workflow was designed to execute a task named "ETL workflow f
 
 ### Task 4.1: Advanced Data Analysis in R
 
-```{r} library(DBI) library(RSQLite) library(readr) library(dplyr) library(plotly)}
+```{r}
+library(DBI)
+library(RSQLite)
+library(readr)
+library(dplyr)
+library(plotly)
+
 ```
 
-```{r writebacktodb} # Connecting to the database connect <- dbConnect(RSQLite::SQLite(), "database.db")}
+```{r writebacktodb}
+# Connecting to the database
+connect <- dbConnect(RSQLite::SQLite(), "database.db")
 ```
 
-```{r} # Report 1  # Top 10 products based on the Profit Generated  # Getting the tables from the database product <- RSQLite::dbGetQuery(connect,'SELECT * FROM PRODUCT') order_item <- RSQLite::dbGetQuery(connect,'SELECT * FROM ORDER_ITEM') order_detail <- RSQLite::dbGetQuery(connect,'SELECT * FROM ORDER_DETAIL') discount <- RSQLite::dbGetQuery(connect,'SELECT * FROM DISCOUNT') # Creating a profit table that includes a total_profit (quantity x unit price) column for each product incorporating the discount percent and filtering out all "cancelled" orders.  profit_data <- order_item %>%   inner_join(order_detail, by = "order_id") %>%    filter(order_status != "Cancelled") %>%   inner_join(product, by = "product_id") %>%   left_join(discount, by = c("promo_code" = "promo_code")) %>%   mutate(     discount_percentage = ifelse(is.na(discount_percent), 0, discount_percent),      total_profit = (order_quantity * unit_price) * (1 - discount_percentage / 100)   ) %>%   group_by(product_id, product_name) %>%   summarise(     total_profit = sum(total_profit),      .groups = 'drop'   ) %>%   arrange(desc(total_profit)) # Arranging the total_profit from highest to lowest  # Selecting the top 10 profitable products top_10_profit_data <- head(profit_data, 10)   # Visualizing the results  ggplot(top_10_profit_data, aes(x = reorder(product_id, total_profit), y = total_profit, fill = product_name)) +   geom_bar(stat = "identity") +   scale_fill_discrete(name = "product Name") +    labs(title = "Top 10 Most Profitable Products", x = "Product ID", y = "Total Profit") +   theme_minimal() +   theme(axis.text.x = element_text(angle = 45, hjust = 1),         legend.title = element_text(size = 12),          legend.text = element_text(size = 10),          plot.title = element_text(hjust = 0.5))   # Top Most Selling Products  # Creating a sales that that includes the total quantity sold for each product and selecting the top 10. sales_data <- order_item %>%   group_by(product_id) %>%   summarise(Total_Sales = sum(order_quantity, na.rm = TRUE)) %>%   arrange(desc(Total_Sales))  top_selling_products <- sales_data %>%   left_join(product, by = "product_id") %>%   select(product_id, product_name, Total_Sales) %>%   top_n(10, Total_Sales)  # Visualizing the results ggplot(top_selling_products, aes(x = reorder(product_id, Total_Sales), y = Total_Sales, fill = product_name)) +   geom_bar(stat = "identity") +   scale_fill_discrete(name = "product Name") +    labs(title = "Top Most Selling Products", x = "Product ID", y = "Total Sales") +   theme_minimal() +   theme(axis.text.x = element_text(angle = 45, hjust = 1),         legend.title = element_text(size = 12),          legend.text = element_text(size = 10),          plot.title = element_text(hjust = 0.5))}
+```{r}
+# Report 1
+
+# Top 10 products based on the Profit Generated
+
+# Getting the tables from the database
+product <- RSQLite::dbGetQuery(connect,'SELECT * FROM PRODUCT')
+order_item <- RSQLite::dbGetQuery(connect,'SELECT * FROM ORDER_ITEM')
+order_detail <- RSQLite::dbGetQuery(connect,'SELECT * FROM ORDER_DETAIL')
+discount <- RSQLite::dbGetQuery(connect,'SELECT * FROM DISCOUNT')
+# Creating a profit table that includes a total_profit (quantity x unit price) column for each product incorporating the discount percent and filtering out all "cancelled" orders.
+
+profit_data <- order_item %>%
+  inner_join(order_detail, by = "order_id") %>% 
+  filter(order_status != "Cancelled") %>%
+  inner_join(product, by = "product_id") %>%
+  left_join(discount, by = c("promo_code" = "promo_code")) %>%
+  mutate(
+    discount_percentage = ifelse(is.na(discount_percent), 0, discount_percent), 
+    total_profit = (order_quantity * unit_price) * (1 - discount_percentage / 100)
+  ) %>%
+  group_by(product_id, product_name) %>%
+  summarise(
+    total_profit = sum(total_profit), 
+    .groups = 'drop'
+  ) %>%
+  arrange(desc(total_profit)) # Arranging the total_profit from highest to lowest
+
+# Selecting the top 10 profitable products
+top_10_profit_data <- head(profit_data, 10)
+
+
+# Visualizing the results 
+ggplot(top_10_profit_data, aes(x = reorder(product_id, total_profit), y = total_profit, fill = product_name)) +
+  geom_bar(stat = "identity") +
+  scale_fill_discrete(name = "product Name") + 
+  labs(title = "Top 10 Most Profitable Products", x = "Product ID", y = "Total Profit") +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1),
+        legend.title = element_text(size = 12), 
+        legend.text = element_text(size = 10), 
+        plot.title = element_text(hjust = 0.5)) 
+
+# Top Most Selling Products
+
+# Creating a sales that that includes the total quantity sold for each product and selecting the top 10.
+sales_data <- order_item %>%
+  group_by(product_id) %>%
+  summarise(Total_Sales = sum(order_quantity, na.rm = TRUE)) %>%
+  arrange(desc(Total_Sales))
+
+top_selling_products <- sales_data %>%
+  left_join(product, by = "product_id") %>%
+  select(product_id, product_name, Total_Sales) %>%
+  top_n(10, Total_Sales)
+
+# Visualizing the results
+ggplot(top_selling_products, aes(x = reorder(product_id, Total_Sales), y = Total_Sales, fill = product_name)) +
+  geom_bar(stat = "identity") +
+  scale_fill_discrete(name = "product Name") + 
+  labs(title = "Top Most Selling Products", x = "Product ID", y = "Total Sales") +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1),
+        legend.title = element_text(size = 12), 
+        legend.text = element_text(size = 10), 
+        plot.title = element_text(hjust = 0.5))
 ```
 
-```{r} #Report 2  # Bundles vs Individual products Comparison by Sales Volume  # Join product with order item  product_order_item <- order_item %>%   inner_join(product, by = "product_id")  # Calculate total quantity sold for bundled products bundled_sales <- product_order_item %>%   filter(!is.na(main_product_id)) %>%   group_by(main_product_id) %>%   summarise(Total_Quantity_Sold = sum(order_quantity, na.rm = TRUE)) %>%   ungroup() %>%   mutate(Product_Type = "Bundled")  # Calculate total quantity sold for individual products individual_sales <- product_order_item %>%   filter(is.na(main_product_id)) %>%   group_by(product_id) %>%   summarise(Total_Quantity_Sold = sum(order_quantity, na.rm = TRUE)) %>%   ungroup() %>%   mutate(Product_Type = "Individual")  # Combining the results total_sales_by_type <- bind_rows(bundled_sales, individual_sales) %>%   group_by(Product_Type) %>%   summarise(Total_Quantity_Sold = sum(Total_Quantity_Sold, na.rm = TRUE)) %>%   ungroup()  print(total_sales_by_type)  # Visualizing the results ggplot(total_sales_by_type, aes(x = Product_Type, y = Total_Quantity_Sold, fill = Product_Type)) +   geom_bar(stat = "identity", width = 0.5) +  # Adjust width here   scale_fill_manual(values = c("Bundled" = "skyblue", "Individual" = "salmon")) +   labs(title = "Total Quantity Sold by Product Type",        x = "Product Type",        y = "Total Quantity Sold") +   theme_minimal() +   theme(legend.position = "none")}
+```{r}
+#Report 2
+
+# Bundles vs Individual products Comparison by Sales Volume
+
+# Join product with order item 
+product_order_item <- order_item %>%
+  inner_join(product, by = "product_id")
+
+# Calculate total quantity sold for bundled products
+bundled_sales <- product_order_item %>%
+  filter(!is.na(main_product_id)) %>%
+  group_by(main_product_id) %>%
+  summarise(Total_Quantity_Sold = sum(order_quantity, na.rm = TRUE)) %>%
+  ungroup() %>%
+  mutate(Product_Type = "Bundled")
+
+# Calculate total quantity sold for individual products
+individual_sales <- product_order_item %>%
+  filter(is.na(main_product_id)) %>%
+  group_by(product_id) %>%
+  summarise(Total_Quantity_Sold = sum(order_quantity, na.rm = TRUE)) %>%
+  ungroup() %>%
+  mutate(Product_Type = "Individual")
+
+# Combining the results
+total_sales_by_type <- bind_rows(bundled_sales, individual_sales) %>%
+  group_by(Product_Type) %>%
+  summarise(Total_Quantity_Sold = sum(Total_Quantity_Sold, na.rm = TRUE)) %>%
+  ungroup()
+
+print(total_sales_by_type)
+
+# Visualizing the results
+ggplot(total_sales_by_type, aes(x = Product_Type, y = Total_Quantity_Sold, fill = Product_Type)) +
+  geom_bar(stat = "identity", width = 0.5) +  # Adjust width here
+  scale_fill_manual(values = c("Bundled" = "skyblue", "Individual" = "salmon")) +
+  labs(title = "Total Quantity Sold by Product Type",
+       x = "Product Type",
+       y = "Total Quantity Sold") +
+  theme_minimal() +
+  theme(legend.position = "none") 
 ```
 
-```{r} #Report 3  #SQL Query to get the sales over a time period   time_period_sales<- RSQLite::dbGetQuery(connect,'SELECT ORDITM.order_id, order_quantity,order_date FROM ORDER_DETAIL ORDDET INNER JOIN ORDER_ITEM ORDITM ON ORDITM.order_id = ORDDET.order_id') #test  #Conversion of order_date field to appropiate format time_period_sales$order_date <- as.Date(time_period_sales$order_date, format="%d/%m/%Y")  time_period_sales$order_date_mnth_yr <- format(time_period_sales$order_date,'%Y/%m')  #Conversion of order_date field to factors with levels  time_period_sales$order_date_mnth_yr <- factor(time_period_sales$order_date_mnth_yr, levels=c('2022/06','2022/07','2022/08','2022/09','2022/10','2022/11','2022/12','2023/01','2023/02','2023/03','2023/04','2023/05','2023/06','2023/07','2023/08','2023/09','2023/10','2023/11','2023/12'))  #Group by sales for each year time_period_sales_group_by<- time_period_sales %>% group_by(order_date_mnth_yr)%>%summarise(quantity=sum(order_quantity))  # Time series graph to show the quantity sold over a given time period  (ggplot(time_period_sales_group_by, aes(x = order_date_mnth_yr, y = quantity,group=1)) +  geom_point()+geom_line()+xlab('Time Period(year/month)')+ylab('Quantity Sold'))}
+```{#Report 3}
+
+#SQL Query to get the sales over a time period 
+
+time_period_sales<- RSQLite::dbGetQuery(connect,'SELECT ORDITM.order_id, order_quantity,order_date FROM ORDER_DETAIL ORDDET INNER JOIN ORDER_ITEM ORDITM ON ORDITM.order_id = ORDDET.order_id')
+#test
+
+#Conversion of order_date field to appropiate format
+time_period_sales$order_date <- as.Date(time_period_sales$order_date, format="%d/%m/%Y")
+
+time_period_sales$order_date_mnth_yr <- format(time_period_sales$order_date,'%Y/%m')
+
+#Conversion of order_date field to factors with levels
+
+time_period_sales$order_date_mnth_yr <- factor(time_period_sales$order_date_mnth_yr, levels=c('2022/06','2022/07','2022/08','2022/09','2022/10','2022/11','2022/12','2023/01','2023/02','2023/03','2023/04','2023/05','2023/06','2023/07','2023/08','2023/09','2023/10','2023/11','2023/12'))
+
+#Group by sales for each year
+time_period_sales_group_by<- time_period_sales %>% group_by(order_date_mnth_yr)%>%summarise(quantity=sum(order_quantity))
+
+# Time series graph to show the quantity sold over a given time period
+
+(ggplot(time_period_sales_group_by, aes(x = order_date_mnth_yr, y = quantity,group=1)) +  geom_point()+geom_line()+xlab('Time Period(year/month)')+ylab('Quantity Sold'))
 ```
 
-```{r} #Report 4:  #SQL query to join customer and order tables to get the sales for each city  cust_order_join<- RSQLite::dbGetQuery(connect, 'SELECT city,ORDITM.order_quantity FROM ADDRESS ADR INNER JOIN CUSTOMER CUST ON ADR.address_id= CUST.address_id INNER JOIN ORDER_DETAIL ORDDET ON ORDDET.customer_id = CUST.customer_id INNER JOIN ORDER_ITEM ORDITM ON ORDITM.order_id = ORDDET.order_id')  #cust_order_join<- inner_join(Customer,Order,by="customer_id")  #Grouping by city to get the overall sales per city  sales_per_region<- cust_order_join %>% group_by(city)%>%summarise(quantity=sum(order_quantity))  #Get the top 10 cities for sales top_10_sales_per_region <- sales_per_region[order(-sales_per_region$quantity),]  top_10_sales_per_region <- head(top_10_sales_per_region,10)  #Bar graph to show the sales per region  ggplot1 <- ggplot(top_10_sales_per_region, aes(x = reorder(city,-quantity), y = quantity,fill=quantity)) +  geom_bar(stat='identity')+scale_fill_gradient(low = "lightblue", high = "darkblue")+ xlab('Top 10 cities where sales is maximum')+ylab('Quantity Sold')  #Table to get the revenue per city   cust_order_product_join <-RSQLite::dbGetQuery(connect, 'SELECT city,ORDITM.order_quantity,unit_price FROM ADDRESS ADR INNER JOIN CUSTOMER CUST ON ADR.address_id= CUST.address_id INNER JOIN ORDER_DETAIL ORDDET ON ORDDET.customer_id = CUST.customer_id INNER JOIN ORDER_ITEM ORDITM ON ORDITM.order_id = ORDDET.order_id INNER JOIN PRODUCT PRD ON PRD.product_id = ORDITM.product_id')  #SQL Query to get the top 5 products  top_5_products <-RSQLite::dbGetQuery(connect, 'SELECT city,ORDITM.order_quantity,unit_price,PRD.product_id,PRD.product_name FROM ADDRESS ADR INNER JOIN CUSTOMER CUST ON ADR.address_id= CUST.address_id INNER JOIN ORDER_DETAIL ORDDET ON ORDDET.customer_id = CUST.customer_id INNER JOIN ORDER_ITEM ORDITM ON ORDITM.order_id = ORDDET.order_id INNER JOIN PRODUCT PRD ON PRD.product_id = ORDITM.product_id')  #Revenue calculation  cust_order_product_join$revenue <-  cust_order_product_join$order_quantity*cust_order_product_join$unit_price  #Grouping by the get the revenue for each city revenue_per_region <- cust_order_product_join %>% group_by(city) %>% summarise(rev= sum(revenue))  #Get the top 10 cities for revenue  top_5_revenue_per_region <- revenue_per_region[order(-revenue_per_region$rev),]  top_5_revenue_per_region <- head(top_5_revenue_per_region,10)  #Bar graph to show the revenue per region  ggplot2 <- ggplot(top_5_revenue_per_region, aes(x = reorder(city, -rev), y = rev,fill=rev)) +  geom_bar(stat='identity')+scale_fill_gradient(low = "lightblue", high = "darkblue")+xlab('Top 10 cities with the maximum revenue')+ylab('Revenue')  grid.arrange(ggplot1,ggplot2)   #revenue_per_product_region <- cust_order_product_join %>% group_by(city) %>% summarise(rev= sum(revenue))  #Revenue calculation to show the top 5 products for each city with maximum revenue  top_5_products$revenue <- top_5_products$order_quantity*top_5_products$unit_price  top_5_products_region <- top_5_products %>% group_by(city,product_name) %>% summarise(rev= sum(revenue))  #Table to show the products that are sold for the top 2 revenue producing cities (top_5_products_region <- top_5_products_region %>% filter(city %in% head(top_5_revenue_per_region$city,2)) %>% select(product_name))}
+```{r}
+#Report 4:
+
+#SQL query to join customer and order tables to get the sales for each city
+
+cust_order_join<- RSQLite::dbGetQuery(connect, 'SELECT city,ORDITM.order_quantity FROM ADDRESS ADR INNER JOIN CUSTOMER CUST ON ADR.address_id= CUST.address_id INNER JOIN ORDER_DETAIL ORDDET ON ORDDET.customer_id = CUST.customer_id INNER JOIN ORDER_ITEM ORDITM ON ORDITM.order_id = ORDDET.order_id')
+
+#cust_order_join<- inner_join(Customer,Order,by="customer_id")
+
+#Grouping by city to get the overall sales per city
+
+sales_per_region<- cust_order_join %>% group_by(city)%>%summarise(quantity=sum(order_quantity))
+
+#Get the top 10 cities for sales
+top_10_sales_per_region <- sales_per_region[order(-sales_per_region$quantity),]
+
+top_10_sales_per_region <- head(top_10_sales_per_region,10)
+
+#Bar graph to show the sales per region
+
+ggplot1 <- ggplot(top_10_sales_per_region, aes(x = reorder(city,-quantity), y = quantity,fill=quantity)) +  geom_bar(stat='identity')+scale_fill_gradient(low = "lightblue", high = "darkblue")+ xlab('Top 10 cities where sales is maximum')+ylab('Quantity Sold')
+
+#Table to get the revenue per city 
+
+cust_order_product_join <-RSQLite::dbGetQuery(connect, 'SELECT city,ORDITM.order_quantity,unit_price FROM ADDRESS ADR INNER JOIN CUSTOMER CUST ON ADR.address_id= CUST.address_id INNER JOIN ORDER_DETAIL ORDDET ON ORDDET.customer_id = CUST.customer_id INNER JOIN ORDER_ITEM ORDITM ON ORDITM.order_id = ORDDET.order_id INNER JOIN PRODUCT PRD ON PRD.product_id = ORDITM.product_id')
+
+#SQL Query to get the top 5 products
+
+top_5_products <-RSQLite::dbGetQuery(connect, 'SELECT city,ORDITM.order_quantity,unit_price,PRD.product_id,PRD.product_name FROM ADDRESS ADR INNER JOIN CUSTOMER CUST ON ADR.address_id= CUST.address_id INNER JOIN ORDER_DETAIL ORDDET ON ORDDET.customer_id = CUST.customer_id INNER JOIN ORDER_ITEM ORDITM ON ORDITM.order_id = ORDDET.order_id INNER JOIN PRODUCT PRD ON PRD.product_id = ORDITM.product_id')
+
+#Revenue calculation
+
+cust_order_product_join$revenue <-  cust_order_product_join$order_quantity*cust_order_product_join$unit_price
+
+#Grouping by the get the revenue for each city
+revenue_per_region <- cust_order_product_join %>% group_by(city) %>% summarise(rev= sum(revenue))
+
+#Get the top 10 cities for revenue
+
+top_5_revenue_per_region <- revenue_per_region[order(-revenue_per_region$rev),]
+
+top_5_revenue_per_region <- head(top_5_revenue_per_region,10)
+
+#Bar graph to show the revenue per region
+
+ggplot2 <- ggplot(top_5_revenue_per_region, aes(x = reorder(city, -rev), y = rev,fill=rev)) +  geom_bar(stat='identity')+scale_fill_gradient(low = "lightblue", high = "darkblue")+xlab('Top 10 cities with the maximum revenue')+ylab('Revenue')
+
+grid.arrange(ggplot1,ggplot2)
+
+
+#revenue_per_product_region <- cust_order_product_join %>% group_by(city) %>% summarise(rev= sum(revenue))
+
+#Revenue calculation to show the top 5 products for each city with maximum revenue
+
+top_5_products$revenue <- top_5_products$order_quantity*top_5_products$unit_price
+
+top_5_products_region <- top_5_products %>% group_by(city,product_name) %>% summarise(rev= sum(revenue))
+
+#Table to show the products that are sold for the top 2 revenue producing cities
+(top_5_products_region <- top_5_products_region %>% filter(city %in% head(top_5_revenue_per_region$city,2)) %>% select(product_name))
 ```
 
 ### Task 4.2: Comprehensive Reporting with Quarto
